--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0" >
-    <link rel="stylesheet" href="../SFDrive-main/dist/main.css">
+    <link rel="stylesheet" href="../dist/main.css">
     <link rel="stylesheet" type="text/css"  href="src/css/index.css">
-    <title> Каршеринг SkillFactory</title>
+    <title> SFDrive</title>
 </head>
 
 <body>
