--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" type="text/css"  href="src/css/faq.css">
-    <title> Каршеринг SkillFactory</title>
+    <title> SFDrive</title>
 </head>
 
 <body>
